# structy

./: Makefile  README.md  justfile  pyproject.toml
structy/: best-bridge.py  best-house-build.py  build-a-queue.py  flatten-tree.py  is-univalue-list.py  knight-attack.py  knightly-number.py  linked-list-cycle.py  merge-lists.py  middle-value.py  most-frequent-char.py  pair-product.py  pair-sum.py  prefix-product.py  quickest-concat.py  string-search.py  tree-path-finder.py  undupe-sorted-linked-list.py  virus-spread.py
