[project]
name = "dsa"
version = "0.0.0"
description = "Data Structures and Algorithms"
requires-python = ">=3.14,<3.15"

[dependency-groups]
dev = ["basedpyright>=1.36.2", "pytest>=9.0.2", "ruff>=0.14.10"]

[tool.basedpyright]
pythonVersion = "3.14"
typeCheckingMode = "recommended"
reportUnusedCallResult = false

[tool.ruff]
target-version = "py314"

[tool.ruff.format]
skip-magic-trailing-comma = true

[tool.ruff.lint]
select = ["ALL"]
ignore = [
  "COM812",
  "D",
  "EM101",
  "ERA001",
  "INP",
  "PLR2004",
  "PT009",
  "RET503",
  "RUF003",
  "S101",
  "TRY003",
]

[tool.ruff.lint.isort]
split-on-trailing-comma = false

[tool.uv]
package = false
