[project]
name = "structy"
version = "0.0.0"
description = "Solutions to data structures and algorithms problems from structy"
requires-python = ">=3.14,<3.15"

[dependency-groups]
dev = ["pytest>=9.0.2", "ruff>=0.14.10", "ty>=0.0.18"]

[tool.ruff]
target-version = "py314"

[tool.ruff.format]
skip-magic-trailing-comma = true

[tool.ruff.lint]
select = ["ALL"]
ignore = [
  "COM812",
  "D",
  "EM101",
  "ERA001",
  "INP",
  "PLR2004",
  "PT009",
  "RET503",
  "RUF003",
  "S101",
  "TRY003",
]

[tool.ruff.lint.isort]
split-on-trailing-comma = false

[tool.ty.rules]
all = "error"

[tool.uv]
package = false
