[project]
name = "structy"
version = "0.0.0"
description = "Solutions to data structures and algorithms problems from structy"
requires-python = ">=3.14,<3.15"

[dependency-groups]
dev = ["pytest>=9.0.2", "ruff>=0.14.10", "ty>=0.0.18"]

[tool.ruff]
fix = true
target-version = "py314"

[tool.ruff.format]
docstring-code-format = true
skip-magic-trailing-comma = true

[tool.ruff.lint]
select = ["ALL"]
ignore = [
  "COM812",  # Trailing comma missing
  "D",       # pydocstyle
  "EM101",   # Exception must not use a string literal, assign to variable first
  "ERA001",  # Found commented-out code
  "INP",     # File is part of an implicit namespace package
  "PLR2004", # Magic value used in comparison
  "PT009",   # Use a regular assert instead of unittest-style
  "RET503",  # Missing explicit return at the end of function able to return non-None value
  "RUF003",  # Comment contains ambiguous character
  "S101",    # Use of assert detected
  "TRY003",  # Avoid specifying long messages outside the exception class
]

[tool.ruff.lint.flake8-tidy-imports]
ban-relative-imports = "all"

[tool.ruff.lint.isort]
split-on-trailing-comma = false

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ty.rules]
all = "error"

[tool.uv]
package = false
